test my updates to the package
Ensure that grf is rebuilt based on the add-boost branch before running this code

--- a/boosting_test.ipynb
+++ b/boosting_test.ipynb
@@ -29,49 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>method</th><th scope=col>mse.y</th><th scope=col>mse.w</th><th scope=col>mse.tau</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>Random Forest  </td><td>0.3212125      </td><td>0.02265108     </td><td>0.05661498     </td></tr>\n",
-       "\t<tr><td>Boosted Trees  </td><td>0.2631783      </td><td>0.01315064     </td><td>0.04726789     </td></tr>\n",
-       "\t<tr><td>Boosted Forests</td><td>0.2431896      </td><td>0.01473752     </td><td>0.04434616     </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|llll}\n",
-       " method & mse.y & mse.w & mse.tau\\\\\n",
-       "\\hline\n",
-       "\t Random Forest   & 0.3212125       & 0.02265108      & 0.05661498     \\\\\n",
-       "\t Boosted Trees   & 0.2631783       & 0.01315064      & 0.04726789     \\\\\n",
-       "\t Boosted Forests & 0.2431896       & 0.01473752      & 0.04434616     \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "method | mse.y | mse.w | mse.tau | \n",
-       "|---|---|---|\n",
-       "| Random Forest   | 0.3212125       | 0.02265108      | 0.05661498      | \n",
-       "| Boosted Trees   | 0.2631783       | 0.01315064      | 0.04726789      | \n",
-       "| Boosted Forests | 0.2431896       | 0.01473752      | 0.04434616      | \n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  method          mse.y     mse.w      mse.tau   \n",
-       "1 Random Forest   0.3212125 0.02265108 0.05661498\n",
-       "2 Boosted Trees   0.2631783 0.01315064 0.04726789\n",
-       "3 Boosted Forests 0.2431896 0.01473752 0.04434616"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'mse.y.rf' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'mse.y.rf' not found\nTraceback:\n"
+     ]
     }
    ],
    "source": [
@@ -106,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loaded gbm 2.1.4\n"
+     ]
+    }
+   ],
    "source": [
     "library(gbm)\n",
     "library(grf)\n",
@@ -125,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,16 +115,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of 10\n",
+      " $ serialized.forest: raw [1:9999416] d0 07 00 00 ...\n",
+      " $ num.trees        : num 2000\n",
+      " $ min.node.size    : num 1\n",
+      " $ ci.group.size    : num 2\n",
+      " $ X.orig           : num [1:500, 1:10] 0.0187 -0.1843 -1.3713 -0.5992 0.2945 ...\n",
+      " $ Y.orig           : int [1:500] 0 0 0 0 1 1 0 1 0 0 ...\n",
+      " $ clusters         : num(0) \n",
+      " $ tunable.params   : Named num [1:5] 0.5 1 6 0.116 4.172\n",
+      "  ..- attr(*, \"names\")= chr [1:5] \"sample.fraction\" \"min.node.size\" \"mtry\" \"alpha\" ...\n",
+      " $ predictions      : num [1:500] 0.533 0.401 0.307 0.374 0.637 ...\n",
+      " $ debiased.error   : num [1:500] 0.2844 0.1608 0.0942 0.1397 0.1315 ...\n",
+      " - attr(*, \"class\")= chr [1:2] \"regression_forest\" \"grf\"\n"
+     ]
+    }
+   ],
    "source": [
     "forest.W = regression_forest(X, W, tune.parameters = TRUE)\n",
     "W.hat = predict(forest.W)$predictions\n",
     "\n",
     "forest.Y = regression_forest(X, Y, tune.parameters = TRUE)\n",
-    "Y.hat = predict(forest.Y)$predictions"
+    "Y.hat = predict(forest.Y)$predictions\n",
+    "\n",
+    "str(forest.W)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol>\n",
+       "\t<li>'hi'</li>\n",
+       "\t<li>NULL</li>\n",
+       "\t<li>'bye'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate}\n",
+       "\\item 'hi'\n",
+       "\\item NULL\n",
+       "\\item 'bye'\n",
+       "\\end{enumerate}\n"
+      ],
+      "text/markdown": [
+       "1. 'hi'\n",
+       "2. NULL\n",
+       "3. 'bye'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[[1]]\n",
+       "[1] \"hi\"\n",
+       "\n",
+       "[[2]]\n",
+       "NULL\n",
+       "\n",
+       "[[3]]\n",
+       "[1] \"bye\"\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
