add code to get table of simulations for different dgps

--- a/boosting_test.ipynb
+++ b/boosting_test.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,19 +123,63 @@
      "output_type": "stream",
      "text": [
       "List of 10\n",
-      " $ serialized.forest: raw [1:9999416] d0 07 00 00 ...\n",
+      " $ serialized.forest: raw [1:13156560] d0 07 00 00 ...\n",
       " $ num.trees        : num 2000\n",
       " $ min.node.size    : num 1\n",
       " $ ci.group.size    : num 2\n",
       " $ X.orig           : num [1:500, 1:10] 0.0187 -0.1843 -1.3713 -0.5992 0.2945 ...\n",
       " $ Y.orig           : int [1:500] 0 0 0 0 1 1 0 1 0 0 ...\n",
       " $ clusters         : num(0) \n",
-      " $ tunable.params   : Named num [1:5] 0.5 1 6 0.116 4.172\n",
+      " $ tunable.params   : Named num [1:5] 0.5 1 6 0.152 2.266\n",
       "  ..- attr(*, \"names\")= chr [1:5] \"sample.fraction\" \"min.node.size\" \"mtry\" \"alpha\" ...\n",
-      " $ predictions      : num [1:500] 0.533 0.401 0.307 0.374 0.637 ...\n",
-      " $ debiased.error   : num [1:500] 0.2844 0.1608 0.0942 0.1397 0.1315 ...\n",
+      " $ predictions      : num [1:500] 0.535 0.383 0.302 0.38 0.624 ...\n",
+      " $ debiased.error   : num [1:500] 0.2857 0.1465 0.0913 0.1443 0.1409 ...\n",
       " - attr(*, \"class\")= chr [1:2] \"regression_forest\" \"grf\"\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<dl class=dl-horizontal>\n",
+       "\t<dt>sample.fraction</dt>\n",
+       "\t\t<dd>0.5</dd>\n",
+       "\t<dt>min.node.size</dt>\n",
+       "\t\t<dd>1</dd>\n",
+       "\t<dt>mtry</dt>\n",
+       "\t\t<dd>6</dd>\n",
+       "\t<dt>alpha</dt>\n",
+       "\t\t<dd>0.151818284648471</dd>\n",
+       "\t<dt>imbalance.penalty</dt>\n",
+       "\t\t<dd>2.26621415267844</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[sample.fraction] 0.5\n",
+       "\\item[min.node.size] 1\n",
+       "\\item[mtry] 6\n",
+       "\\item[alpha] 0.151818284648471\n",
+       "\\item[imbalance.penalty] 2.26621415267844\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "sample.fraction\n",
+       ":   0.5min.node.size\n",
+       ":   1mtry\n",
+       ":   6alpha\n",
+       ":   0.151818284648471imbalance.penalty\n",
+       ":   2.26621415267844\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  sample.fraction     min.node.size              mtry             alpha \n",
+       "        0.5000000         1.0000000         6.0000000         0.1518183 \n",
+       "imbalance.penalty \n",
+       "        2.2662142 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -145,7 +189,8 @@
     "forest.Y = regression_forest(X, Y, tune.parameters = TRUE)\n",
     "Y.hat = predict(forest.Y)$predictions\n",
     "\n",
-    "str(forest.W)"
+    "str(forest.W)\n",
+    "forest.W$tunable.params"
    ]
   },
   {
