add strong signal simulaitojn

--- a/boosting_simulations.ipynb
+++ b/boosting_simulations.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: future\n"
+      "Warning message:\n",
+      "“package ‘future.apply’ was built under R version 3.5.2”Loading required package: future\n",
+      "Warning message:\n",
+      "“package ‘future’ was built under R version 3.5.2”"
      ]
     }
    ],
@@ -17,15 +20,13 @@
     "library(grf)\n",
     "library(future.apply)\n",
     "library(xtable)\n",
-    "plan(multiprocess, workers = 12)\n"
+    "plan(multiprocess, workers = 4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "run_simulation <- function(param.set,dgp,uniform,iterations) {\n",
@@ -95,6 +96,19 @@
     "    return(result)\n",
     "}\n",
     "\n",
+    "dgp_strong_signal <- function(X) { \n",
+    "    result = list() \n",
+    "    n = dim(X)[1] \n",
+    "    TAU = 2*X[,1]\n",
+    "    E.W = 1 / (1 + exp(-X[, 1] - X[, 2]))\n",
+    "    W = rbinom(length(E.W) ,1, E.W)\n",
+    "    E.Y = W*TAU + X[,2] + 3 * X[,3] + 4 * X[,4]\n",
+    "    result$W <- W\n",
+    "    result$tau <- TAU\n",
+    "    result$E.Y <- E.Y\n",
+    "\n",
+    "    return(result) \n",
+    "}\n",
     "dgp_linear <- function(X) {\n",
     "    n = dim(X)[1]\n",
     "    result = list() \n",
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -120,30 +134,85 @@
      "output_type": "stream",
      "text": [
       "  Var1 Var2 Var3\n",
-      "1 4000    6    1\n",
-      "2 4000   60    1\n",
-      "3 4000    6   10\n",
-      "4 4000   60   10\n"
+      "1  500    6  0.1\n",
+      "2  500    6  1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>n</th><th scope=col>p</th><th scope=col>sigma</th><th scope=col>mse.tau.boost</th><th scope=col>mse.tau.forest</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>500      </td><td>6        </td><td>0.1      </td><td>0.4249971</td><td>0.6675151</td></tr>\n",
+       "\t<tr><td>500      </td><td>6        </td><td>1.0      </td><td>0.7761276</td><td>0.9750540</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllll}\n",
+       " n & p & sigma & mse.tau.boost & mse.tau.forest\\\\\n",
+       "\\hline\n",
+       "\t 500       & 6         & 0.1       & 0.4249971 & 0.6675151\\\\\n",
+       "\t 500       & 6         & 1.0       & 0.7761276 & 0.9750540\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "n | p | sigma | mse.tau.boost | mse.tau.forest | \n",
+       "|---|---|\n",
+       "| 500       | 6         | 0.1       | 0.4249971 | 0.6675151 | \n",
+       "| 500       | 6         | 1.0       | 0.7761276 | 0.9750540 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  n   p sigma mse.tau.boost mse.tau.forest\n",
+       "1 500 6 0.1   0.4249971     0.6675151     \n",
+       "2 500 6 1.0   0.7761276     0.9750540     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% latex table generated in R 3.5.1 by xtable 1.8-3 package\n",
+      "% Thu Apr 25 16:36:21 2019\n",
+      "\\begin{table}[ht]\n",
+      "\\centering\n",
+      "\\begin{tabular}{rrrrrr}\n",
+      "  \\hline\n",
+      " & n & p & sigma & mse.tau.boost & mse.tau.forest \\\\ \n",
+      "  \\hline\n",
+      "1 & 500.00 & 6.00 & 0.10 & 0.42 & 0.67 \\\\ \n",
+      "  2 & 500.00 & 6.00 & 1.00 & 0.78 & 0.98 \\\\ \n",
+      "   \\hline\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n"
      ]
     }
    ],
    "source": [
     "set.seed(1) \n",
-    "n.opt <- c(4000)\n",
+    "n.opt <- c(500)\n",
     "#p.opt <- c(6,12,60)\n",
-    "p.opt <- c(6,60)\n",
+    "p.opt <- c(6)\n",
     "#noise.opt <- c(1,5,10)\n",
-    "noise.opt <-c(1,10) \n",
+    "noise.opt <-c(0.1,1) \n",
     "\n",
     "param.set <- expand.grid(n.opt,p.opt,noise.opt)\n",
     "\n",
     "print(param.set)\n",
-    "#mse.table <- run_simulation(param.set[1:nrow(param.set),],dgp_smooth,uniform=TRUE,100)\n",
+    "mse.table <- run_simulation(param.set[1:nrow(param.set),],dgp_strong_signal,uniform=FALSE,10)\n",
     "\n",
-    "#results <- cbind(param.set[1:nrow(param.set),],mse.table)\n",
-    "#colnames(results) <- c(\"n\",\"p\",\"sigma\",\"mse.tau.boost\",\"mse.tau.forest\")\n",
+    "results <- cbind(param.set[1:nrow(param.set),],mse.table)\n",
+    "colnames(results) <- c(\"n\",\"p\",\"sigma\",\"mse.tau.boost\",\"mse.tau.forest\")\n",
     "\n",
-    "#print(xtable(results))\n",
+    "results \n",
+    "print(xtable(results))\n",
     "#mean MSE \n",
     "#histogram of both "
    ]
